--- a/lesson9/task1/styles.css
+++ b/lesson9/task1/styles.css
@@ -47,8 +47,8 @@ div {
 
   .relative-parent {
       position: relative;
-      bottom: 20px;
-      right: 50px;
+      top: 20px;
+      left: 50px;
   }
 
   .absolute-parent {
