--- a/Lesson10/hw2/styles.css
+++ b/Lesson10/hw2/styles.css
@@ -1,6 +1,5 @@
 body {
     width: 100%;
-    box-sizing: border-box;
 }
 
 h1 {
@@ -8,6 +7,7 @@ h1 {
 }
 
 .article {
+    box-sizing: content-box;
     flex-basis: 300px;
     flex-grow: 1;
     margin: 8px;
