--- a/Lesson10/hw2/styles.css
+++ b/Lesson10/hw2/styles.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 .article {
-    box-sizing: content-box;
+    box-sizing: border-box;
     flex-basis: 300px;
     flex-grow: 1;
     margin: 8px;
