--- a/Lesson10/hw2/styles.css
+++ b/Lesson10/hw2/styles.css
@@ -9,6 +9,7 @@ h1 {
 .article {
     box-sizing: border-box;
     flex-wrap: wrap;
+    flex-shrink: 1;;
     flex-basis: 300px;
     flex-grow: 1;
     margin: 8px;
