--- a/Lesson10/hw2/styles.css
+++ b/Lesson10/hw2/styles.css
@@ -13,7 +13,7 @@ h1 {
     box-sizing: border-box;
     flex-wrap: wrap;
     flex-shrink: 1;;
-    flex-basis: 300px;
+    width: 300px;
     flex-grow: 1;
     margin: 8px;
     padding: 16px;
