--- a/lesson11/task3/styles.css
+++ b/lesson11/task3/styles.css
@@ -3,6 +3,8 @@
 }
 
 .dropdown {
+    position: relative;
+    color: white;
     background-color: darkgreen;
     padding: 16px;
     opacity: 0.8;
@@ -28,6 +30,8 @@
     display: none;
     padding: 0;
     margin: 0;
+    top: 50px;
+    left: 0px;
 }
 
 .menu-item {
