--- a/lesson13/task1/styles.css
+++ b/lesson13/task1/styles.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-div {
+.mountains {
     background-image: url(nature.jpeg);
     background-position: center;
     width: 300px;
@@ -14,7 +14,7 @@ div {
     color: white;
 }
 
-span {
+.text {
     background: linear-gradient(45deg , white , silver);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
