--- a/lesson13/task1/styles.css
+++ b/lesson13/task1/styles.css
@@ -9,13 +9,8 @@
     height: 500px;
     background-size: cover;
     text-align: center;
-}
-
-.text {
-    background: linear-gradient(45deg , white , silver);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
     font-size: 32px;
     font-weight: 700;
     padding-top: 32px;
+    color:white;
 }
