--- a/lesson14/task1/styles.css
+++ b/lesson14/task1/styles.css
@@ -1,4 +1,4 @@
-html {
+body {
     font-size: 18px;
 }
 
@@ -7,5 +7,8 @@ html {
     font-size: 24px;
     line-height: 32px;
     padding: 8px;
+}
+
+.properties-list {
     list-style-type: none;
 }
