--- a/lesson14/task1/styles.css
+++ b/lesson14/task1/styles.css
@@ -1,14 +1,14 @@
-body {
+html {
     font-size: 18px;
 }
 
 .properties-list__item {
-    color: #f39;
-    font-size: 24px;
-    line-height: 32px;
     padding: 8px;
 }
 
 .properties-list {
+    color: #f39;
+    font-size: 24px;
+    line-height: 32px;
     list-style-type: none;
 }
