--- a/lesson15/task1/styles.css
+++ b/lesson15/task1/styles.css
@@ -1,5 +1,5 @@
 .main-image {
-    margin: 20px auto 0;
+    margin: 50px auto 50px;
     display: block;
     max-width: 100%;
     border-radius: 20px;
