--- a/lesson15/task1/styles.css
+++ b/lesson15/task1/styles.css
@@ -30,3 +30,13 @@
 .invert-filter {
     filter: invert(100%);
 }
+
+.caption-2 {
+    text-align: center;
+    margin: auto;
+}
+
+.caption-3 {
+    text-align: center;
+    margin: auto;
+}
