--- a/lesson15/task1/styles.css
+++ b/lesson15/task1/styles.css
@@ -1,4 +1,4 @@
-.main-image {
+.image {
     margin: 50px auto 50px;
     display: block;
     max-width: 100%;
@@ -14,7 +14,7 @@
     box-shadow: 0px 7px 18px -8px rgba(0,0,0,0.75);
 }
 
-.opacity-filter {
+.opacity {
     filter: opacity(50%);
 }
 
@@ -24,11 +24,11 @@
     line-height: 30px;
 }
 
-.blur-filter {
+.blur {
     filter: blur(4px);
 }
 
-.invert-filter {
+.invert {
     filter: invert(100%);
 }
 
