--- a/lesson16/task3/styles.css
+++ b/lesson16/task3/styles.css
@@ -1,3 +1,6 @@
+body {
+    margin: 16px;
+}
 input[type="checkbox"] {
     visibility: hidden;
     width: 0;
@@ -15,7 +18,6 @@ input[type="checkbox"] {
 }
 
 .checkbox {
-    margin: 16px;
     padding-left: 35px;
     font-size: 24px;
     position: relative;
