--- a/lesson16/task3/styles.css
+++ b/lesson16/task3/styles.css
@@ -1,6 +1,4 @@
-body {
-    margin: 16px;
-}
+
 input[type="checkbox"] {
     visibility: hidden;
     width: 0;
@@ -18,6 +16,8 @@ input[type="checkbox"] {
 }
 
 .checkbox {
+    display: block;
+    margin: 16px;
     padding-left: 35px;
     font-size: 24px;
     position: relative;
