--- a/lesson16/task3/styles.css
+++ b/lesson16/task3/styles.css
@@ -16,7 +16,7 @@ input[type="checkbox"] {
 }
 
 .checkbox {
-    display: block;
+    display: inline-block;
     margin: 16px;
     padding-left: 35px;
     font-size: 24px;
