--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -33,14 +33,17 @@
 }
 
 .form-control {
+    display: inline-block;
     margin-bottom: 8px;
 }
 
 .form-label {
+    display: inline-block;
     margin-bottom: 4px;
 }
 
 .submit-button {
+    display: inline-block;
     width: 100%;
     height: 32px;
     border-radius: 4px;
