--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -2,54 +2,61 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: bisque;
+}
+
+html {
+    font-size: 16px;
+    font-family: monospace;
+}
+
+.page {
+    background-color: bisque;
+}
+
 .login-form {
+    background-color: aqua;
     position: absolute;
     top: calc(100%/2 - 150px);
     left: calc(100%/2 - 150px);
-    background-color: aqua;
-    font-size: 16px;
-    font-family: monospace;
     width: 300px;
     padding: 16px;
     box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
 }
 
-.form-input {
-    display: inline-block;
-    width: 100%;
-    height: 32px;
-    border-radius: 4px;
-    border: 1px solid #808080;
-    padding: 4px;
-    outline: none;
+.form-title {
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .form-control {
-    display: inline-block;
     margin-bottom: 8px;
+}
+
+.form-input {
+    width: 100%;
+    height: 32px;
+    border-radius: 4px;
+    border: 1px #808080;
+    padding: 4px;
+    outline: none;
 }
 
 .form-input:invalid {
     border: 3px solid #ff0000;
 }
 
-.form-title {
-    text-transform: uppercase;
-    text-align: center;
-}
-
 .form-label {
-    display: inline-block;
     margin-bottom: 4px;
+    display: inline-block;
 }
 
 .submit-button {
-    display: inline-block;
-    width: 100%;
     height: 32px;
-    border-radius: 4px;
-    margin-top: 16px;
+    width: 100%;
     background-color: #ff7f50;
-    text-transform: uppercase;
+    margin-top: 16px;
     color: white;
+    text-transform: uppercase;
 }
