--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -18,7 +18,7 @@ html {
 .login-form {
     background-color: aqua;
     position: absolute;
-    top: calc(100%/2 - 150px);
+    top: calc(100%/2 - 188.44px);
     left: calc(100%/2 - 150px);
     width: 300px;
     padding: 16px;
@@ -38,7 +38,7 @@ html {
     width: 100%;
     height: 32px;
     border-radius: 4px;
-    border: 1px #808080;
+    border: 1px solid #808080;
     padding: 4px;
     outline: none;
 }
@@ -59,4 +59,5 @@ html {
     margin-top: 16px;
     color: white;
     text-transform: uppercase;
+    border-radius: 4px;
 }
