--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -6,12 +6,19 @@ body {
     background-color: bisque;
 }
 
-.login-form {
+html {
     font-size: 16px;
     font-family: monospace;
+}
+
+.page {
+    background-color: bisque;
+}
+
+.login-form {
     background-color: aqua;
     position: absolute;
-    top: calc(50% - 172.44px);
+    top: calc(100%/2 - 150px);
     left: calc(100%/2 - 150px);
     width: 300px;
     padding: 16px;
@@ -31,7 +38,7 @@ body {
     width: 100%;
     height: 32px;
     border-radius: 4px;
-    border: 1px solid #808080;
+    border: 1px #808080;
     padding: 4px;
     outline: none;
 }
@@ -52,5 +59,4 @@ body {
     margin-top: 16px;
     color: white;
     text-transform: uppercase;
-    border-radius: 4px;
 }
