--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -27,8 +27,7 @@ html {
 
 .form-title {
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     text-transform: uppercase;
 }
 
