--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -26,8 +26,7 @@ html {
 }
 
 .form-title {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     text-transform: uppercase;
 }
 
