--- a/lesson16/hw1/styles.css
+++ b/lesson16/hw1/styles.css
@@ -1,64 +1,44 @@
-* {
+* {  
     box-sizing: border-box;
-}
-
-body {
-    background-color: bisque;
-}
-
-html {
-    font-size: 16px;
-    font-family: monospace;
-}
-
-.page {
-    background-color: bisque;
-}
-
-.login-form {
-    background-color: aqua;
-    position: absolute;
-    top: calc(100%/2 - 172.44px);
-    left: calc(100%/2 - 150px);
-    width: 300px;
-    padding: 16px;
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
-}
-
-.form-title {
-    position: relative;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.form-control {
-    margin-bottom: 8px;
-}
-
-.form-input {
-    width: 100%;
-    height: 32px;
-    border-radius: 4px;
-    border: 1px solid #808080;
-    padding: 4px;
-    outline: none;
-}
-
-.form-input:invalid {
-    border: 3px solid #ff0000;
-}
-
-.form-label {
-    margin-bottom: 4px;
-    display: inline-block;
-}
-
-.submit-button {
-    height: 32px;
-    width: 100%;
-    background-color: #ff7f50;
-    margin-top: 16px;
-    color: white;
-    text-transform: uppercase;
-    border-radius: 4px;
-}
+    }
+    
+    body {  
+    display: flex;  
+    background-color: bisque;  
+    height: 100vh;}
+    .page {  
+    margin: auto;  
+    display: flex;}
+    .form-control {  
+    display: flex;  
+    flex-direction: column;  
+    margin-bottom: 8px;}
+    .form-label {  margin-bottom: 4px;}
+    .login-form { 
+     width: 300px;  
+    padding: 16px;  
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);  
+    display: inline-block;  background-color: aqua;  
+    font-size: 16px;  
+    font-family: monospace;}
+    .form-title {  
+    text-align: center;  
+    text-transform: uppercase;}
+    .form-input { 
+     height: 32px; 
+     border: 1px solid #808080; 
+     border-radius: 4px;  
+    padding: 4px;  
+    width: 100%;  
+    outline: none;}
+    .form-input:invalid {  
+    border: 3px solid #FF0000;}
+    .submit-button { 
+     height: 32px; 
+     background-color: #FF7F50; 
+     margin-top: 16px;
+      text-transform: uppercase;  
+    color: #fff;  
+    width: 100%; 
+     border-radius: 4px;
+    }
