--- a/lesson16/hw2/styles.css
+++ b/lesson16/hw2/styles.css
@@ -1,8 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 .form {
     margin: 32px;
 }
 
 div {
+    margin-left: 4px;
     margin-bottom: 8px;
 }
 
