--- a/lesson16/hw2/styles.css
+++ b/lesson16/hw2/styles.css
@@ -1,5 +1,4 @@
 .form {
-    display: flex;
     margin: 32px;
 }
 
@@ -10,4 +9,8 @@ div {
 
 textarea{
     color:#757575;
+}
+
+.languages {
+    display: flex;
 }
