--- a/lesson17/task2/styles.css
+++ b/lesson17/task2/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 table {
     width: 500px;
     margin: 16px;
@@ -23,7 +27,7 @@ tbody > tr:hover {
     color: white;
 }
 caption {
-    margin-bottom: 8px;
+    margin: 8px;
 }
 
 tfoot{
