--- a/lesson18/task2/styles.css
+++ b/lesson18/task2/styles.css
@@ -1,13 +1,14 @@
 button {
-    margin: 64px;
-    width: 200px;
-    height: 50px;
     font-weight: 700px;
+    font-family: "Courier New", Courier , monospace;
+    align-items: center;
+    margin: 64px;
+    width: 250px;
+    height: 50px;
     background-color: coral;
     color: white;
     border-radius: 4px;
     text-transform: uppercase;
-    font-family: "Courier New", Courier , monospace;
     border: none;
     outline: none;
     cursor: pointer;
