--- a/lesson19/task2/styles.css
+++ b/lesson19/task2/styles.css
@@ -3,8 +3,8 @@
     height: 100px;
     position: absolute;
     background: coral;
-    animation: move 4s;
-    animation-iteration-count: 2;
+    animation: move 0.5s;
+    animation-iteration-count: infinite;
     animation-direction: alternate;
 }
 
