--- a/lesson19/hw1/styles.css
+++ b/lesson19/hw1/styles.css
@@ -5,6 +5,8 @@
 }
 
 .spinner {
+    width: 50vw;
+    height: 50vh;
     position: absolute;
     top: calc(50% - 9px);
     left: calc(50% - 30.5px);
