--- a/lesson19/hw2/styles.css
+++ b/lesson19/hw2/styles.css
@@ -2,6 +2,11 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 50vw;
+    height: 50vh;
+}
+
 html {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
@@ -9,6 +14,7 @@ html {
 }
 
 .block {
+    display: block;
     text-align: center;
     color: white;
     text-transform: uppercase;
