--- a/lesson19/hw2/styles.css
+++ b/lesson19/hw2/styles.css
@@ -19,7 +19,7 @@ html {
     color: white;
     text-transform: uppercase;
     position: absolute;
-    width: 250px;
+    max-width: 250px;
     height: 100px;
     border-radius: 10px;
     background-color: coral;
