--- a/lesson19/hw2/styles.css
+++ b/lesson19/hw2/styles.css
@@ -10,7 +10,14 @@ html {
     text-transform: uppercase;
 }
 
+body {
+    width: 100vw;
+    height: 100vh;
+}
+
 .block {
+    width: 100vw;
+    height: 100vh;
     position: absolute;
     width: 250px;
     height: 100px;
