--- a/lesson19/hw2/styles.css
+++ b/lesson19/hw2/styles.css
@@ -1,40 +1,31 @@
-* {
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 14px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    color: white;
-    text-transform: uppercase;
-}
-
-body {
-    width: 100vw;
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
 }
 
 .block {
-    width: 100vw;
-    height: 100vh;
     position: absolute;
-    width: 250px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
     height: 100px;
-    background-color: coral;
-    text-align: center;
-    line-height: 100px;
-    left: calc(50% - 125px);
     border-radius: 10px;
+    background-color: coral;
     animation: move 2s ease;
-    animation-fill-mode: forwards;
 }
 
 @keyframes move {
     from {
         top: -100px;
     }
-
     to {
         top: calc(50vh - 50px);
     }
