--- a/lesson19/hw2/styles.css
+++ b/lesson19/hw2/styles.css
@@ -1,32 +1,26 @@
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-}
-
 .block {
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
-    font-weight: 700;
-    color: white;
-    text-transform: uppercase;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    left: calc(50vw - 100px);
     width: 250px;
     height: 100px;
     border-radius: 10px;
     background-color: coral;
-    animation: move 2s ease;
+    animation: moving 2s ease forwards;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+    color: white;
 }
 
-@keyframes move {
-    from {
-        top: -100px;
+@keyframes moving {
+    0% {
+        top: -100px;   
     }
-    to {
+    100% {
         top: calc(50vh - 50px);
     }
 }
