--- a/lesson20/hw1/styles.css
+++ b/lesson20/hw1/styles.css
@@ -6,7 +6,10 @@
 
 .spinner {
     margin: auto;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .spinner-text {
