--- a/lesson20/hw1/styles.css
+++ b/lesson20/hw1/styles.css
@@ -1,22 +1,26 @@
-.container {
-    display: flex;
-    height: 100vh;
-    width: 100vw;
+* {
+    box-sizing: border-box;
 }
 
-.spinner {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@keyframes spinning {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
-.spinner-text {
-    font-size: 16px;
-    text-transform: uppercase;
-    animation: blinking 2s , blinking 2s linear;
-    animation-iteration-count: infinite;
+@keyframes blinking {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
 }
 
 .circle {
@@ -30,25 +34,22 @@
     margin-bottom: 8px;
 }
 
-@keyframes blinking {
-    0% {
-        opacity: 0;
-    }
-
-    50% {
-        opacity: 1;
-    }
-
-    100% {
-        opacity: 0;
-    }
+.container {
+    display: flex;
+    height: 100vh;
 }
 
-@keyframes spinning {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.spinner {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner-text {
+    font-family: monospace;
+    font-size: 16px;
+    text-transform: uppercase;
+    animation: blinking 2s infinite linear;
 }
