--- a/lesson21/hw1/styles.css
+++ b/lesson21/hw1/styles.css
@@ -2,6 +2,13 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: Vardana;
+    color: #555;
+    font-size: 16px;
+    height: 100%;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -9,67 +16,48 @@ body {
     height: 100%;
 }
 
-html {
-    font-family: Verdana;
-    color: #555;
-    font-size: 16px;
-}
-
 .header {
     text-align: center;
-    background: linear-gradient(60deg,red,orange);
+    color: white;
+    background-image: linear-gradient(60deg, red, orange);
 }
 
 .footer {
-    width: 100vw;
-    text-align: center;
-    position: absolute;
-    bottom: 0;
     background-color: #e5e5e5;
     padding: 0.5em;
+    text-align: center;
+    flex: 0 0 auto;
+}
+
+.navigation,
+.section,
+.news {
+    padding: 0.5em;
+}
+
+.navigation {
+    width: 20%;
 }
 
 .main {
     display: flex;
-}
-
-.navigation {
-    padding: 0.5em;
-    width: 20%;
-}
-
-.nav-list-item {
-    color: white;
-    background-color: #808080;
-    height: 2em;
-    margin-bottom: 0.5em;
-}
-
-.nav-list-link {
-    display: block;
-    padding: 0.5em;
-    text-decoration: none;
-    color: white;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    justify-content: center;
+    flex: 1 0 auto;
+    width: 100vw;
 }
 
 .section {
-    font-size: 1.25em;
     width: 60%;
-    padding: 0.5em;
+    font-size: 1.25em;
 }
 
-.section__header {
-    font-size: 5vw;
-    text-align: center;
+.news {
+    width: 20%;
+    height: 100%;
 }
 
 .units-list {
     line-height: 1.75em;
-    padding: 0;
-    list-style-type: none;
 }
 
 .css-units {
@@ -79,7 +67,29 @@ html {
     font-weight: 700;
 }
 
-.news {
-    width: 20%;
-    padding: 0.5em;
+.section__header {
+    font-size: 5vw;
+    text-align: center;
+}
+
+.nav-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.nav-list-item {
+    display: flex;
+    align-items: center;
+    height: 2em;
+    margin: 0.5em 0;
+    background-color: #808080;
+}
+
+.nav-list-link {
+    color: white;
+    margin: 0.5em;
+    text-decoration: none;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
