--- a/lesson22/task2/styles.css
+++ b/lesson22/task2/styles.css
@@ -32,8 +32,12 @@ span {
     .products {
         display: flex;
         flex-grow: 2;
+        flex-basis: 100%;
     }
-}
+
+    div {
+        flex-basis: 50%;
+    }
 
 @media screen and (min-width: 900px) {
     .content {
