--- a/lesson22/hw1/styles.css
+++ b/lesson22/hw1/styles.css
@@ -1,68 +1,65 @@
-@media screen and (max-width: 600px) {
-    .nav-list{ 
-       visibility: hidden;
-    }
-}
-
-@media screen and (min-width: 600px) {
-    .fa-bars{
-        visibility: hidden;
-    }
-}
-
-
 * {
     box-sizing: border-box;
 }
 
 html {
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .header {
     display: flex;
-    align-items: center;
     height: 3em;
-    padding: 1em;
+    padding: 0 1em;
+    align-items: center;
     background-color: #eee;
 }
 
-.fa-bars {
+.header-button {
+    padding-top: 0;
+    padding-bottom: 0;
     font-size: 2em;
+    border: none;
+    outline: none;
+    background: none;
+    cursor: pointer;
 }
 
-.header-button {
-    padding: 0;
-    outline: none;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
+.navigation {
+    display: none;
+    margin: 1.5em .5em;
+    max-width: 20vw;
 }
 
 .nav-list {
     padding: 0;
+    margin: 0;
     list-style-type: none;
 }
 
-.navigation {
-    width: 20%;
-    padding: 0.5em;
-}
-
 .nav-list-item {
-    background-color: #808080;
-    color: white;
     height: 2em;
-    margin-bottom: 0.5em;
+    margin: .5em 0;
+    color: white;
+    background-color: #808080;
 }
 
 .nav-list-link {
-    color: #fff;
     display: block;
-    padding: 0.5em;
+    padding: 0 .5em;
+    line-height: 2em;
     text-decoration: none;
+    color: white;
+    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    overflow: hidden;
+}
+
+@media screen and (min-width: 600px) {
+    .header-button {
+        display: none;
+    }
+    .navigation {
+        display: block;
+    }
 }
