--- a/lesson23/task1/styles/header.scss
+++ b/lesson23/task1/styles/header.scss
@@ -17,7 +17,7 @@
     &__item {
         background-color: $color-secondary;
         padding: $unit;
-        margin: $unit * 2;
+        margin: $unit;
         border-radius: $border-radius;
         cursor: pointer;
 
