--- a/lesson23/hw1/styles/header.scss
+++ b/lesson23/hw1/styles/header.scss
@@ -19,7 +19,7 @@ nav {
     &__item {
         display: flex;
         list-style-type: none;
-        margin: 0 8px;
+        padding: 0 8px;
         cursor: pointer;
         align-items: center;
 
