--- a/lesson23/hw1/styles.css
+++ b/lesson23/hw1/styles.css
@@ -19,7 +19,7 @@ nav {
 .menu__item {
   display: flex;
   list-style-type: none;
-  margin: 0 8px;
+  padding: 0 8px;
   cursor: pointer;
   align-items: center;
 }
