--- a/lesson23/hw1/styles.css
+++ b/lesson23/hw1/styles.css
@@ -8,50 +8,55 @@ nav {
 }
 
 .menu {
-  height: 100%;
-  margin: 0 0 0 3em;
+  list-style-type: none;
   display: flex;
-  color: #fff;
+  align-items: center;
+  height: 100%;
+  padding: 0;
+  margin: 0 0 0 3em;
   text-transform: uppercase;
 }
 .menu__item {
   display: flex;
-  list-style-type: none;
-  padding: 0 8px;
-  cursor: pointer;
   align-items: center;
+  height: 100%;
+  color: #fff;
+  padding-left: 8px;
+  padding-right: 8px;
+  cursor: pointer;
 }
 .menu__item:hover {
   background-color: #9acd32;
 }
-.menu__item-text {
-  align-items: center;
-}
 .menu__item_active {
-  color: yellow;
+  position: relative;
+  color: #ff0;
 }
 .menu__item_active:hover .submenu {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 3em;
 }
 
 .submenu {
-  position: absolute;
-  top: 3em;
-  margin: 0px;
-  padding: 0px;
+  list-style-type: none;
+  display: none;
+  padding: 0;
+  margin: 0;
   background-color: #ff7f50;
   box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.2);
   color: #fff;
   min-width: 120px;
   z-index: 1;
-  display: none;
 }
 .submenu__item {
-  list-style-type: none;
-  padding: 0 8px;
+  margin-left: 8px;
+  margin-right: 8px;
+  cursor: pointer;
 }
 .submenu__item:hover {
-  color: black;
+  color: #000;
 }
 
 * {
