--- a/lesson23/hw2/styles/layout.scss
+++ b/lesson23/hw2/styles/layout.scss
@@ -5,7 +5,7 @@
     background-color: #ff7f50;
 }
 
-.products-list {
+.product-list {
     display: flex;
     flex-grow: 1;
     min-height: 200px;
@@ -41,7 +41,7 @@ span {
 }
 
 @media screen and (min-width: 900px) {
-    .content {
+    .container {
         display: flex;
     }
 }
