--- a/lesson23/hw2/styles.css
+++ b/lesson23/hw2/styles.css
@@ -1,51 +1,60 @@
-.navigation {
-  display: flex;
-  flex-grow: 1;
-  min-height: 200px;
-  background-color: #ff7f50;
-}
-
-.product-list {
-  display: flex;
-  flex-grow: 1;
-  min-height: 200px;
-  background-color: #006400;
-}
-
-.news {
-  display: flex;
-  flex-grow: 1;
-  min-height: 200px;
-  background-color: #0ff;
-}
-
-span {
-  margin: auto;
-  padding: 8px;
-  border-radius: 4px;
-  text-transform: lowercase;
-  font-family: Verdana;
-  background-color: #faebd7;
-}
-
-@media screen and (min-width: 600px) {
-  .products {
-    display: flex;
-    flex-grow: 2;
-    flex-basis: 100%;
-  }
-
-  div {
-    flex-basis: 50%;
-  }
-}
-@media screen and (min-width: 900px) {
-  .container {
-    display: flex;
-  }
-}
 * {
   box-sizing: border-box;
 }
 
-/*# sourceMappingURL=style.css.map */
+@media screen and (min-width: 900px) {
+  .page {
+    display: flex;
+    width: 100%;
+  }
+}
+@media screen and (min-width: 600px) {
+  .main {
+    display: flex;
+  }
+}
+@media screen and (min-width: 900px) {
+  .main {
+    flex: 2;
+  }
+}
+.main-block {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+}
+.main-block__navigation {
+  background-color: #ff7f50;
+}
+@media screen and (min-width: 600px) {
+  .main-block__navigation {
+    flex: 1;
+  }
+}
+.main-block__products {
+  background-color: #006400;
+}
+@media screen and (min-width: 600px) {
+  .main-block__products {
+    flex: 1;
+  }
+}
+.main-block__news {
+  background-color: #0ff;
+}
+@media screen and (min-width: 900px) {
+  .main-block__news {
+    flex: 1;
+  }
+}
+
+span {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 8px;
+  border-radius: 4px;
+  background-color: #faebd7;
+  text-transform: lowercase;
+}
+
+/*# sourceMappingURL=styles.css.map */
