--- a/lesson23/hw2/styles/index.scss
+++ b/lesson23/hw2/styles/index.scss
@@ -1,5 +1,52 @@
 @import 'layout.scss';
-
 * {
     box-sizing: border-box;
+}
+
+@include large {
+    .page {
+        display: flex;
+        width: 100%;
+    }
+}
+
+.main {
+    @include middle {
+        display: flex;
+    }
+    @include large {
+        flex: 2;
+    }
+    &-block {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 200px;
+        &__navigation {
+            background-color: #ff7f50;
+            @include middle {
+                flex: 1;
+            }
+        }
+        &__products {
+            background-color: #006400;
+            @include middle {
+                flex: 1;
+            }
+        }
+        &__news {
+            background-color: #0ff;
+            @include large {
+                flex: 1;
+            }
+        }
+    }
+}
+
+span {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 8px;
+    border-radius: 4px;
+    background-color: #faebd7;
+    text-transform: lowercase;
 }
