--- a/lesson23/hw2/styles/layout.scss
+++ b/lesson23/hw2/styles/layout.scss
@@ -1,47 +1,19 @@
-.navigation {
-    display: flex;
-    flex-grow: 1;
-    min-height: 200px;
-    background-color: #ff7f50;
-}
-
-.product-list {
-    display: flex;
-    flex-grow: 1;
-    min-height: 200px;
-    background-color: #006400;
-}
-
-.news {
-    display: flex;
-    flex-grow: 1;
-    min-height: 200px;
-    background-color: #0ff;
-}
-
-span {
-    margin: auto;
-    padding: 8px;
-    border-radius: 4px;
-    text-transform: lowercase;
-    font-family: Verdana;
-    background-color: #faebd7;
-}
-
-@media screen and (min-width: 600px) {
-    .products {
-        display: flex;
-        flex-grow: 2;
-        flex-basis: 100%;
-    }
-
-    div {
-        flex-basis: 50%;
+$sm: 600px;
+$mdl: 900px;
+@mixin small {
+    @media screen and (max-width: $sm-1) {
+        @content;
     }
 }
 
-@media screen and (min-width: 900px) {
-    .container {
-        display: flex;
+@mixin middle {
+    @media screen and (min-width: $sm) {
+        @content;
+    }
+}
+
+@mixin large {
+    @media screen and (min-width: $mdl) {
+        @content;
     }
 }
