--- a/lesson25/styles/card.scss
+++ b/lesson25/styles/card.scss
@@ -6,7 +6,7 @@
         width: 100vw;
         width: 1440px;
         height: 1000px;
-        background: #141B1C
+        background: #141B1C;
     }
     &-card {
         display: flex;
