--- a/lesson25/styles/index.scss
+++ b/lesson25/styles/index.scss
@@ -1,18 +1,17 @@
 @import 'card.scss';
-
 * {
     box-sizing: border-box;
 }
 
 html,
 body {
+    font-family: 'Montserrat', sans-serif;
     height: 100vh;
-    font-family: 'Monserrat' , sans-serif;
-    color: white;
+    color: #fff;
 }
 
 body {
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: flex;
 }
