--- a/lesson25/styles.css
+++ b/lesson25/styles.css
@@ -150,15 +150,15 @@
 
 html,
 body {
+  font-family: "Montserrat", sans-serif;
   height: 100vh;
-  font-family: "Monserrat", sans-serif;
-  color: white;
+  color: #fff;
 }
 
 body {
+  display: flex;
   justify-content: center;
   align-items: center;
-  display: flex;
 }
 
 /*# sourceMappingURL=styles.css.map */
