--- a/lesson25/styles/card.scss
+++ b/lesson25/styles/card.scss
@@ -143,7 +143,10 @@
             list-style-type: none;
             
             &__contain {
+                font-style: normal;
                 font-size: 15px;
+                font-weight: 300;
+                line-height: 18px;
                 display: flex;
                 align-items: center;
                 height: 50px;
