--- a/lesson25/styles/card.scss
+++ b/lesson25/styles/card.scss
@@ -67,12 +67,13 @@
                             right: 79.5%;
                             top: 14.71%;
                             bottom: -34.29%;
-
                             background: #DC3F45;
                             transform: rotate(-45deg);
                             width: 147px;
                             height: 25px;
                             font-weight: 700;
+                            font-style: normal;
+                            font-weight: bold;
                             font-size: 14px;
                             line-height: 17px;
                             color: #FFFFFF;
