--- a/lesson25/styles/card.scss
+++ b/lesson25/styles/card.scss
@@ -52,32 +52,24 @@
                    
                     &-badge {
                         display: flex;
-                        position: absolute;
-                        left: 69.35%;
-                        right: 0%;
-                        top: 0%;
-                        bottom: 84.39%;
-                        width: 104px;
-                        height: 104px;
-                        overflow: hidden;
+                      position: absolute;
+                      width: 104px;
+                      height: 104px;
+                      transform: translate(276px);
+                      overflow: hidden;
                        
                         &__stripe {
                             position: absolute;
-                            left: 0%;
-                            right: 79.5%;
-                            top: 14.71%;
-                            bottom: -34.29%;
-                            background: #DC3F45;
-                            transform: rotate(-45deg);
-                            width: 147px;
-                            height: 25px;
-                            font-weight: 700;
-                            font-style: normal;
-                            font-weight: bold;
-                            font-size: 14px;
-                            line-height: 17px;
-                            color: #FFFFFF;
-                            border: none;
+                        background-color: #DC3F45;
+                        transform: rotate(45deg);
+                        height: 25px;
+                        width: 147px;
+                        font-weight: 700;
+                        font-size: 14px;
+                        line-height: 25px;
+                        text-align: center;
+                        top: 30px;
+                        right: -30px;
                         }
                     }
                 }
