--- a/lesson25/styles.css
+++ b/lesson25/styles.css
@@ -44,19 +44,17 @@
   overflow: hidden;
 }
 .price-card:nth-child(2) .price-card__title-badge__stripe {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-  width: 147px;
+  background-color: #DC3F45;
+  transform: rotate(45deg);
   height: 25px;
-  background: #DC3F45;
+  width: 147px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 17px;
-  color: #FFFFFF;
-  border: none;
-  transform: translate(-10px, 28px) rotate(45deg);
+  line-height: 25px;
+  text-align: center;
+  top: 30px;
+  right: -30px;
 }
 .price-card:nth-child(3) .price-card__price, .price-card:nth-child(3) .price-card__order-btn {
   background-color: #EC632A;
@@ -110,7 +108,10 @@
   list-style-type: none;
 }
 .price-card__options-list__contain {
+  font-style: normal;
   font-size: 15px;
+  font-weight: 300;
+  line-height: 18px;
   display: flex;
   align-items: center;
   height: 50px;
